objects/AW_AccountPropensityPredictionModel__mdt.object
<CustomObject>
    <description>This metadata is used to store the image and flow details for Next Best Action</description>
    <fields>
        <fullName>AW_FlowName__c</fullName>
        <description>This indicates the name of the flow used</description>
        <label>Flow Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ImageId__c</fullName>
        <description>ID of the clients profile Image</description>
        <label>Image Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ScoreFieldAPIName__c</fullName>
        <description>This is used to store the Prediction Score</description>
        <label>Score Field API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_StatusFieldAPIName__c</fullName>
        <description>This is used to store the Prediction Status</description>
        <label>Status Field API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Account Propensity Prediction Model</label>
    <pluralLabel>Account Propensity Prediction Model</pluralLabel>
</CustomObject>